# Lingtian-Smart-Mine-test

./: .env.example  .gitignore  README.md  RUN.md  docker-compose.yml  mcp-config.json
agent/: Dockerfile  pyproject.toml  requirements.txt
agent/src/: main.py
agent/src/agent/: graph.py  prompts.py  state.py  tools.py
agent/src/mcp/: client.py
agent/src/utils/: config.py
mcp-servers/lme-price-mcp/: Dockerfile  pyproject.toml  requirements.txt
mcp-servers/lme-price-mcp/src/lme_price_mcp/: __init__.py  price_api.py  price_simulator.py  server.py  tools.py
mcp-servers/mineral-pdf-mcp/: Dockerfile  pyproject.toml  requirements.txt
mcp-servers/mineral-pdf-mcp/src/mineral_pdf_mcp/: __init__.py  __main__.py  pdf_parser.py  server.py  tools.py
mcp-servers/mineral-pdf-mcp/tests/: __init__.py  conftest.py  test_pdf_parser.py  test_tools.py
mcp-servers/mining-news-mcp/: Dockerfile  pyproject.toml  requirements.txt
mcp-servers/mining-news-mcp/src/mining_news_mcp/: __init__.py  __main__.py  news_api.py  server.py  tools.py
mcp-servers/mining-news-mcp/tests/: conftest.py  test_news_api.py  test_tools.py
