[project]
name = "mineral-pdf-mcp"
version = "0.1.0"
description = "MCP Server — NI 43-101 矿产储量 PDF 解析 (PyMuPDF)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
mineral-pdf-mcp = "mineral_pdf_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
